* Fix labels too low when they appear inside edit boxes when the field is empty and doesn't have focus. * Fix label too low on Wi-Fi selector box.

--- a/client/src/app/wifi-settings/wifi-settings.component.scss
+++ b/client/src/app/wifi-settings/wifi-settings.component.scss
@@ -44,7 +44,7 @@ span.connecting-spinner {
 
 div.loading-spinner {
   position: relative;
-  top: 0.5rem;
+  top: 0.3rem;
   display: flex;
   > mat-spinner {
     position: relative;
