--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -225,6 +225,12 @@ mat-label {
   font-size: small !important;
 }
 
+
+.mat-mdc-text-field-wrapper .mat-mdc-form-field-flex .mat-mdc-floating-label {
+  top: calc(var(--mat-form-field-container-height) / 2.32) !important;
+}
+
+
 button[mat-button] {
   padding: 8px;
   min-height: 36px;
